feat: add changelog and update version to 1.0.1; enhance internationalization support with new translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,6 +80,10 @@
     "edit": "Edit",
     "close": "Close",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "expandEditor": "Expand editor",
+    "mockThisTooltip": "Create mock rule from this request",
+    "switchToRussian": "Switch to Russian",
+    "switchToEnglish": "Switch to English"
   }
 }
