--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -80,6 +80,10 @@
     "edit": "Редактировать",
     "close": "Закрыть",
     "yes": "Да",
-    "no": "Нет"
+    "no": "Нет",
+    "expandEditor": "Развернуть редактор",
+    "mockThisTooltip": "Создать правило из этого запроса",
+    "switchToRussian": "Переключить на русский",
+    "switchToEnglish": "Переключить на английский"
   }
 }
