feat: Add ESLint/Prettier setup and duplicate rule feature
- Setup ESLint with TypeScript and React rules
- Add Prettier for code formatting
- Add lint, lint:fix, format, format:check, and type-check scripts
- Fix all linting errors and format entire codebase
- Implement duplicate rule functionality with Copy button
- Add i18n translations for duplicate feature (EN/RU)
- Update manifest.json with privacy policy URL

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,7 @@
     "noRulesDesc": "Create your first mock rule to start intercepting requests",
     "edit": "Edit",
     "delete": "Delete",
+    "duplicate": "Duplicate",
     "method": "Method",
     "status": "Status",
     "delay": "Delay",
