--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -21,6 +21,7 @@
     "noRulesDesc": "Создайте первое правило для перехвата запросов",
     "edit": "Редактировать",
     "delete": "Удалить",
+    "duplicate": "Дублировать",
     "method": "Метод",
     "status": "Статус",
     "delay": "Задержка",
