feat: add response headers UI
- Create HeadersInput component with key-value pairs interface
- Add headers section to RuleEditor form
- Show visual indicator in RuleItem when headers are configured
- Use temporary unique keys for empty header rows
- Add i18n translations for headers (EN/RU)
- Headers stored in MockRule.headers (optional Record<string, string>)

Phase 2.1 completed

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,11 @@
     "validationError": "{{error}}",
     "variables": "Available variables: {{timestamp}}, {{uuid}}, {{random_number}}"
   },
+  "headers": "Response Headers",
+  "addHeader": "Add Header",
+  "noHeaders": "No headers configured",
+  "headerKey": "Header Name",
+  "headerValue": "Header Value",
   "settings": {
     "language": "Language",
     "theme": "Theme",
