Add Export/Import Rules feature (Phase 2.2)
- Export button downloads JSON file with all rules (mockapi-rules-YYYY-MM-DD.json)
- Import button with file picker accepts .json files
- Full validation: structure, required fields, array format
- Merge logic: avoids duplicate IDs, imports only new rules
- Success/error alerts with translated messages
- Disabled export button when no rules exist
- Added Import/Export icons (Upload/Download)
- EN/RU translations added
- Hidden file input for clean UI

Files modified:
- src/components/RulesTab.tsx (UI buttons and handlers)
- src/components/App.tsx (export/import logic)
- src/locales/en.json (translations)
- src/locales/ru.json (translations)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,10 @@
     "edit": "Edit",
     "delete": "Delete",
     "duplicate": "Duplicate",
+    "export": "Export",
+    "import": "Import",
+    "importSuccess": "Successfully imported {count} rule(s)",
+    "importError": "Import failed",
     "method": "Method",
     "status": "Status",
     "delay": "Delay",
