--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,6 +22,10 @@
     "edit": "Редактировать",
     "delete": "Удалить",
     "duplicate": "Дублировать",
+    "export": "Экспорт",
+    "import": "Импорт",
+    "importSuccess": "Импортировано {count} правил",
+    "importError": "Ошибка импорта",
     "method": "Метод",
     "status": "Статус",
     "delay": "Задержка",
