Add Copy URL feature to Request Log (Phase 2.5)
Features:
- Add Copy URL button next to Mock This button
- Clipboard API integration with navigator.clipboard.writeText()
- Visual feedback: button shows check icon and 'Copied!' for 2 seconds
- i18n support: EN and RU translations added

Modified files:
- src/components/RequestItem.tsx: Added Copy button with icon toggle
- src/locales/en.json: Added copyURL, copy, copied translations
- src/locales/ru.json: Added Russian translations

Estimated: 1h | Actual: 45 minutes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,7 +38,10 @@
     "noRequests": "No requests logged",
     "noRequestsDesc": "Click Record button and interact with the page to capture requests",
     "mockThis": "Mock This",
-    "time": "Time"
+    "time": "Time",
+    "copyURL": "Copy URL",
+    "copy": "Copy",
+    "copied": "Copied!"
   },
   "editor": {
     "createRule": "Create Rule",
