Revert Copy URL feature (Phase 2.5)
Removed due to clipboard API permissions policy issues.
Feature was not essential for core functionality.

Modified files:
- src/components/RequestItem.tsx: Removed Copy button and handlers
- public/manifest.json: Removed clipboardWrite permission
- src/locales/en.json: Removed copy translations
- src/locales/ru.json: Removed copy translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,10 +38,7 @@
     "noRequests": "No requests logged",
     "noRequestsDesc": "Click Record button and interact with the page to capture requests",
     "mockThis": "Mock This",
-    "time": "Time",
-    "copyURL": "Copy URL",
-    "copy": "Copy",
-    "copied": "Copied!"
+    "time": "Time"
   },
   "editor": {
     "createRule": "Create Rule",
