--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,10 +38,7 @@
     "noRequests": "Нет записанных запросов",
     "noRequestsDesc": "Нажмите кнопку Запись и взаимодействуйте со страницей для захвата запросов",
     "mockThis": "Мокировать",
-    "time": "Время",
-    "copyURL": "Копировать URL",
-    "copy": "Копировать",
-    "copied": "Скопировано!"
+    "time": "Время"
   },
   "editor": {
     "createRule": "Создать правило",
