Add Advanced Filtering feature to Request Log
Features:
- Filter requests by HTTP method (GET, POST, PUT, DELETE, PATCH, OPTIONS)
- Filter requests by status code range (2xx, 3xx, 4xx, 5xx)
- Filters button positioned in header line with Clear Log button
- Collapsible filter panel with active filter count badge
- All filter buttons have cursor-pointer for better UX
- Full i18n support (EN/RU)

Implementation:
- New FilterPanel component with FilterState interface
- Integrated into RequestsTab with state management
- Filter logic matches methods and status code ranges
- Clean UI with absolute positioned dropdown panel

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,7 +38,11 @@
     "noRequests": "No requests logged",
     "noRequestsDesc": "Click Record button and interact with the page to capture requests",
     "mockThis": "Mock This",
-    "time": "Time"
+    "time": "Time",
+    "filters": "Filters",
+    "filterByMethod": "Filter by Method",
+    "filterByStatus": "Filter by Status Code",
+    "clearFilters": "Clear All Filters"
   },
   "editor": {
     "createRule": "Create Rule",
