--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,7 +38,11 @@
     "noRequests": "Нет записанных запросов",
     "noRequestsDesc": "Нажмите кнопку Запись и взаимодействуйте со страницей для захвата запросов",
     "mockThis": "Мокировать",
-    "time": "Время"
+    "time": "Время",
+    "filters": "Фильтры",
+    "filterByMethod": "Фильтр по методу",
+    "filterByStatus": "Фильтр по статусу",
+    "clearFilters": "Сбросить фильтры"
   },
   "editor": {
     "createRule": "Создать правило",
