chore: update CHANGELOG for v2.0.3 release with fixes, enhancements, and new features

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,8 +54,11 @@
     "urlPatternPlaceholder": "e.g., https://api.example.com/users/*",
     "matchType": "Match Type",
     "wildcard": "Wildcard",
+    "wildcardDesc": "Use * for any characters. Example: https://api.example.com/users/*",
     "exact": "Exact Match",
+    "exactDesc": "Match exact URL path (ignores query parameters)",
     "regex": "Regex",
+    "regexDesc": "Use regular expressions. Example: https://api\\.example\\.com/users/\\d+",
     "method": "HTTP Method",
     "anyMethod": "Any Method",
     "statusCode": "Status Code",
