--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -54,8 +54,11 @@
     "urlPatternPlaceholder": "например, https://api.example.com/users/*",
     "matchType": "Тип совпадения",
     "wildcard": "Подстановочные знаки",
+    "wildcardDesc": "Используйте * для любых символов. Пример: https://api.example.com/users/*",
     "exact": "Точное совпадение",
+    "exactDesc": "Точное совпадение пути URL (игнорирует параметры запроса)",
     "regex": "Регулярное выражение",
+    "regexDesc": "Используйте регулярные выражения. Пример: https://api\\.example\\.com/users/\\d+",
     "method": "HTTP метод",
     "anyMethod": "Любой метод",
     "statusCode": "Код статуса",
