feat: add reset rule hits functionality with i18n support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,7 @@
     "method": "Method",
     "status": "Status",
     "lastMatched": "Last matched",
+    "resetHits": "Reset",
     "delay": "Delay",
     "contentType": "Content Type"
   },
