feat: implement theme context and settings menu
- Added ThemeContext to manage theme state and preferences.
- Created ThemeProvider to handle theme changes and persist settings.
- Introduced SettingsMenu component for theme and language selection.
- Updated UI components to support light and dark themes.
- Enhanced styling for various components to improve accessibility and visual consistency.
- Added useClickOutside hook for better user interaction in menus.
- Updated translations for new settings options.
- Modified storage to include theme preference.
- Refactored existing components to utilize new theme context and improve responsiveness.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,12 +87,17 @@
     "headerName": "Header name (e.g., Authorization)",
     "headerValue": "Header value",
     "addHeader": "Add Header",
+    "removeHeader": "Remove header",
     "validationError": "{{error}}",
     "variables": "Available variables: {{timestamp}}, {{uuid}}, {{random_number}}"
   },
   "settings": {
+    "settings": "Settings",
     "language": "Language",
     "theme": "Theme",
+    "themeSystem": "System",
+    "themeLight": "Light",
+    "themeDark": "Dark",
     "notifications": "Notifications"
   },
   "devtoolsPrompt": {
