feat: Refactor and enhance import/export functionality
- Introduced new ImportDialog component for handling rule imports with merge and replace options.
- Added InfoPanel and StatItem components for displaying import statistics and information.
- Created RadioOption component for selecting import modes.
- Updated IconButton to use enums for variant and size.
- Refactored SettingsMenu to utilize enums for theme and language options.
- Added enums for various application states including Language, Theme, and ImportMode.
- Implemented helper functions for header manipulation and import/export operations.
- Enhanced rule validation logic and added detailed JSON validation.
- Updated localization files to support new import/export features.
- Refactored storage management to use enums for theme settings.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,8 +24,12 @@
     "edit": "Edit",
     "delete": "Delete",
     "duplicate": "Duplicate",
-    "export": "Export",
+    "exportAll": "Export All",
+    "exportSelected": "Export Selected",
     "import": "Import",
+    "selectToExport": "Select to Export",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
     "importSuccess": "Successfully imported {count} rule(s)",
     "importError": "Import failed",
     "method": "Method",
@@ -35,6 +39,23 @@
     "delay": "Delay",
     "delayMs": "Delay: {{delay}}ms",
     "contentType": "Content Type"
+  },
+  "import": {
+    "previewTitle": "Import Rules",
+    "foundRules": "Found rules",
+    "mergeMode": "Merge (Keep existing)",
+    "mergeModeDesc": "Add new rules and skip duplicates",
+    "replaceMode": "Replace All",
+    "replaceModeDesc": "Delete all existing rules and import new ones",
+    "mergePreview": "Merge Preview",
+    "newRules": "New rules to add",
+    "duplicatesSkipped": "Duplicates (will skip)",
+    "totalAfterMerge": "Total rules after import",
+    "replaceWarning": "Warning: This will delete all existing rules",
+    "willRemove": "Rules to remove",
+    "willAdd": "Rules to add",
+    "confirmMerge": "Merge Rules",
+    "confirmReplace": "Replace All Rules"
   },
   "warnings": {
     "overlappingRules": "Overlaps with {{count}} other rule{{count, plural, one {} other {s}}}",
