--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -24,8 +24,12 @@
     "edit": "Редактировать",
     "delete": "Удалить",
     "duplicate": "Дублировать",
-    "export": "Экспорт",
+    "exportAll": "Экспортировать все",
+    "exportSelected": "Экспортировать выбранные",
     "import": "Импорт",
+    "selectToExport": "Выбрать для экспорта",
+    "selectAll": "Выбрать все",
+    "deselectAll": "Снять выделение",
     "importSuccess": "Импортировано {count} правил",
     "importError": "Ошибка импорта",
     "method": "Метод",
@@ -35,6 +39,23 @@
     "delay": "Задержка",
     "delayMs": "Задержка: {{delay}}мс",
     "contentType": "Тип контента"
+  },
+  "import": {
+    "previewTitle": "Импорт правил",
+    "foundRules": "Найдено правил",
+    "mergeMode": "Объединить (сохранить существующие)",
+    "mergeModeDesc": "Добавить новые правила и пропустить дубликаты",
+    "replaceMode": "Заменить все",
+    "replaceModeDesc": "Удалить все существующие правила и импортировать новые",
+    "mergePreview": "Предпросмотр объединения",
+    "newRules": "Новых правил для добавления",
+    "duplicatesSkipped": "Дубликаты (будут пропущены)",
+    "totalAfterMerge": "Всего правил после импорта",
+    "replaceWarning": "Внимание: Это удалит все существующие правила",
+    "willRemove": "Правил к удалению",
+    "willAdd": "Правил к добавлению",
+    "confirmMerge": "Объединить правила",
+    "confirmReplace": "Заменить все правила"
   },
   "warnings": {
     "overlappingRules": "Пересекается с {{count}} {{count, plural, one {правилом} few {правилами} other {правилами}}}",
