feat: Implement folder management features including creation, renaming, and deletion of folders
- Added `RulesSearchBar` component for searching rules.
- Introduced `RulesToolbar` for managing rules and folders.
- Created `SelectableRuleItem` for selectable rule display.
- Implemented `ConfirmDialog` for confirmation prompts.
- Enhanced `Storage` class to handle folder data.
- Added folder management helper functions in `folderManagement.ts`.
- Updated `types.ts` to include `Folder` interface.
- Added localization support for folder-related strings in `en.json` and `ru.json`.
- Introduced `Toast` component for displaying notifications.
- Updated styles for toast notifications and other UI components.
- Refactored `RulesTab` to integrate new folder management features.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,23 @@
     "delayMs": "Delay: {{delay}}ms",
     "contentType": "Content Type"
   },
+  "folders": {
+    "createFolder": "New Folder",
+    "renameFolder": "Rename Folder",
+    "deleteFolder": "Delete Folder",
+    "deleteConfirmMessage": "Delete folder \"{{name}}\"? Rules in this folder will be ungrouped.",
+    "folderName": "Folder Name",
+    "folderNamePlaceholder": "E.g., User API, Payment API",
+    "create": "Create",
+    "rename": "Rename",
+    "delete": "Delete",
+    "expand": "Expand folder",
+    "collapse": "Collapse folder",
+    "enabled": "enabled",
+    "enableAll": "Enable all rules",
+    "disableAll": "Disable all rules",
+    "ungrouped": "Ungrouped Rules"
+  },
   "import": {
     "previewTitle": "Import Rules",
     "foundRules": "Found rules",
@@ -63,6 +80,11 @@
     "invalidJson": "Invalid JSON in response body",
     "unusedRule": "Not used in the last 30 days"
   },
+  "validation": {
+    "folderNameEmpty": "Folder name cannot be empty",
+    "folderNameTooLong": "Folder name is too long (max 50 characters)",
+    "folderNameDuplicate": "A folder with this name already exists"
+  },
   "requests": {
     "title": "Request Log",
     "clear": "Clear Log",
@@ -70,6 +92,7 @@
     "noRequests": "No requests logged",
     "noRequestsDesc": "Click Record button and interact with the page to capture requests",
     "mockThis": "Mock This",
+    "mocked": "Mocked",
     "time": "Time",
     "filters": "Filters",
     "filterByMethod": "Filter by Method",
@@ -110,7 +133,9 @@
     "addHeader": "Add Header",
     "removeHeader": "Remove header",
     "validationError": "{{error}}",
-    "variables": "Available variables: {{timestamp}}, {{uuid}}, {{random_number}}"
+    "variables": "Available variables: {{timestamp}}, {{uuid}}, {{random_number}}",
+    "folder": "Folder",
+    "noFolder": "No folder (ungrouped)"
   },
   "settings": {
     "settings": "Settings",
