feat: Update placeholder text in en.json and ru.json for consistency and clarity

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -107,9 +107,9 @@
     "updateRule": "Update Rule",
     "cancel": "Cancel",
     "ruleName": "Rule Name",
-    "ruleNamePlaceholder": "e.g., Mock User API",
+    "ruleNamePlaceholder": "E.g., Mock User API",
     "urlPattern": "URL Pattern",
-    "urlPatternPlaceholder": "e.g., https://api.example.com/users/*",
+    "urlPatternPlaceholder": "E.g., https://api.example.com/users/*",
     "matchType": "Match Type",
     "wildcard": "Wildcard",
     "wildcardDesc": "Use * for any characters. Example: https://api.example.com/users/*",
@@ -120,9 +120,9 @@
     "method": "HTTP Method",
     "anyMethod": "Any Method",
     "statusCode": "Status Code",
-    "statusCodePlaceholder": "e.g., 200, 404, 500",
+    "statusCodePlaceholder": "E.g., 200, 404, 500",
     "delay": "Response Delay (ms)",
-    "delayPlaceholder": "e.g., 0, 1000, 3000",
+    "delayPlaceholder": "E.g., 0, 1000, 3000",
     "contentType": "Content Type",
     "json": "JSON",
     "text": "Text",
