--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -107,9 +107,9 @@
     "updateRule": "Обновить правило",
     "cancel": "Отмена",
     "ruleName": "Название правила",
-    "ruleNamePlaceholder": "например, Мок API пользователя",
+    "ruleNamePlaceholder": "Например, Мок API пользователя",
     "urlPattern": "URL шаблон",
-    "urlPatternPlaceholder": "например, https://api.example.com/users/*",
+    "urlPatternPlaceholder": "Например, https://api.example.com/users/*",
     "matchType": "Тип совпадения",
     "wildcard": "Подстановочные знаки",
     "wildcardDesc": "Используйте * для любых символов. Пример: https://api.example.com/users/*",
@@ -120,9 +120,9 @@
     "method": "HTTP метод",
     "anyMethod": "Любой метод",
     "statusCode": "Код статуса",
-    "statusCodePlaceholder": "например, 200, 404, 500",
+    "statusCodePlaceholder": "Например, 200, 404, 500",
     "delay": "Задержка ответа (мс)",
-    "delayPlaceholder": "например, 0, 1000, 3000",
+    "delayPlaceholder": "Например, 0, 1000, 3000",
     "contentType": "Тип контента",
     "json": "JSON",
     "text": "Текст",
