feat: add response hook functionality to modify responses dynamically
- Introduced a new `responseHook` property in `MockRule` to allow JavaScript code execution for modifying responses.
- Added `responseMode` enum to differentiate between mock responses and passthrough behavior.
- Implemented validation for response hooks to ensure safe execution.
- Updated UI components to support response hook configuration, including enabling/disabling hooks and providing context for available helper functions.
- Enhanced existing components like `TextArea`, `Toggle`, and `Toast` for better user experience and consistency.
- Created a new `responseHook.ts` helper file to manage response hook execution and validation.
- Added constants for validation and response body limits to improve maintainability.
- Updated localization files to include new strings related to response hooks and modes.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,7 +138,27 @@
     "validationError": "{{error}}",
     "variables": "Dynamic variables: {{timestamp}} (current time), {{uuid}} (unique ID), {{random_number}} (0-999999), {{random_string}} (random text)",
     "folder": "Folder",
-    "noFolder": "No folder (ungrouped)"
+    "noFolder": "No folder (ungrouped)",
+    "responseHook": "Response Hook",
+    "responseHookEnabled": "Enabled",
+    "responseHookDisabled": "Disabled",
+    "responseHookDescription": "JavaScript code to dynamically modify the response before returning it",
+    "responseHookPlaceholder": "// Modify response before returning\n// Available: response, request, helpers\n\n// Example: Add timestamp\nresponse.timestamp = helpers.timestamp();\n\n// Example: Generate unique ID\nresponse.id = helpers.uuid();",
+    "responseMode": "Response Mode",
+    "responseModeModify": "Modify Mock Response",
+    "responseModeModifyDesc": "Apply hook to configured mock response body",
+    "responseModePassthrough": "Passthrough + Modify",
+    "responseModePassthroughDesc": "Forward real request and apply hook to real response",
+    "responseBodyIgnoredInPassthrough": "Note: Response body is ignored in Passthrough mode. Hook transforms real server response.",
+    "responseHookContext": "Available context:",
+    "responseHookContextResponse": "response - Response body (parsed JSON or string)",
+    "responseHookContextRequest": "request - Request details (url, method, headers, body)",
+    "responseHookContextHelpers": "helpers - Utility functions:",
+    "responseHookHelperRandomId": "randomId() - Generate random ID",
+    "responseHookHelperUuid": "uuid() - Generate UUID v4",
+    "responseHookHelperTimestamp": "timestamp() - Current timestamp",
+    "responseHookHelperRandomNumber": "randomNumber(min, max) - Random number",
+    "responseHookHelperRandomString": "randomString(length) - Random string"
   },
   "settings": {
     "settings": "Settings",
