--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -138,7 +138,27 @@
     "validationError": "{{error}}",
     "variables": "Динамические переменные: {{timestamp}} (текущее время), {{uuid}} (уникальный ID), {{random_number}} (0-999999), {{random_string}} (случайный текст)",
     "folder": "Папка",
-    "noFolder": "Без папки (несгруппировано)"
+    "noFolder": "Без папки (несгруппировано)",
+    "responseHook": "Хук ответа",
+    "responseHookEnabled": "Включен",
+    "responseHookDisabled": "Выключен",
+    "responseHookDescription": "JavaScript код для динамического изменения ответа перед возвратом",
+    "responseHookPlaceholder": "// Изменить ответ перед возвратом\n// Доступно: response, request, helpers\n\n// Пример: Добавить временную метку\nresponse.timestamp = helpers.timestamp();\n\n// Пример: Сгенерировать уникальный ID\nresponse.id = helpers.uuid();",
+    "responseMode": "Режим ответа",
+    "responseModeModify": "Изменить мок-ответ",
+    "responseModeModifyDesc": "Применить хук к настроенному мок-ответу",
+    "responseModePassthrough": "Проброс + Изменение",
+    "responseModePassthroughDesc": "Переслать реальный запрос и применить хук к реальному ответу",
+    "responseBodyIgnoredInPassthrough": "Примечание: Тело ответа игнорируется в режиме проброса. Хук преобразует реальный ответ сервера.",
+    "responseHookContext": "Доступный контекст:",
+    "responseHookContextResponse": "response - Тело ответа (JSON или строка)",
+    "responseHookContextRequest": "request - Детали запроса (url, method, headers, body)",
+    "responseHookContextHelpers": "helpers - Вспомогательные функции:",
+    "responseHookHelperRandomId": "randomId() - Сгенерировать случайный ID",
+    "responseHookHelperUuid": "uuid() - Сгенерировать UUID v4",
+    "responseHookHelperTimestamp": "timestamp() - Текущая временная метка",
+    "responseHookHelperRandomNumber": "randomNumber(min, max) - Случайное число",
+    "responseHookHelperRandomString": "randomString(length) - Случайная строка"
   },
   "settings": {
     "settings": "Настройки",
